--- a/package.json
+++ b/package.json
@@ -1,32 +1,44 @@
 {
-  "name": "npm",
+  "name": "node.js-test-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npx tsc",
     "lint": "eslint src//**/*.{js,ts,json}",
     "prettier": "prettier --config .prettierrc src//**/*.{js,ts,json} --write",
-    "build": "npx tsc"
+    "start": "npm run build && node build/index.js",
+    "jasmine": "jasmine"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Abdelrahman-Abdou/node.js-test-server.git"
   },
-  "author": "Udacity",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Abdelrahman-Abdou/node.js-test-server/issues"
   },
   "homepage": "https://github.com/Abdelrahman-Abdou/node.js-test-server#readme",
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/jasmine": "^4.3.0",
+    "@types/node": "^18.11.4",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "prettier": "2.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@types/sharp": "^0.31.0",
+    "express": "^4.18.2",
+    "jasmine": "^4.4.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "sharp": "^0.31.1"
   }
 }
