--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint src//**/*.{js,ts,json}",
     "prettier": "prettier --config .prettierrc src//**/*.{js,ts,json} --write",
     "start": "npm run build && node build/index.js",
-    "jasmine": "jasmine"
+    "jasmine": "jasmine",
+    "test": "npm run build && npm run jasmine"
   },
   "repository": {
     "type": "git",
@@ -31,11 +32,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "supertest": "^6.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "@types/sharp": "^0.31.0",
+    "@types/supertest": "^2.0.12",
     "express": "^4.18.2",
     "jasmine": "^4.4.0",
     "jasmine-spec-reporter": "^7.0.0",
