--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jasmine-spec-reporter": "^7.0.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "supertest": "^6.3.1",
@@ -40,8 +41,8 @@
     "@types/sharp": "^0.31.0",
     "@types/supertest": "^2.0.12",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jasmine": "^4.4.0",
-    "jasmine-spec-reporter": "^7.0.0",
     "sharp": "^0.31.1"
   }
 }
